[package]
name = "gitlens-ffi"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Foreign function interface for GitLens"
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "gitlens"
crate-type = ["cdylib", "staticlib"]

[dependencies]
gitlens-core = { path = "../core" }

# FFI-specific dependencies
pyo3 = { version = "0.19.0", features = ["extension-module", "chrono"] }